--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack --mode=development",
+    "build": "npx webpack --node-env production",
+    "dev": "npx webpack --mode=development",
     "start": "qode ./dist/index.js",
     "debug": "qode --inspect ./dist/index.js"
   },
@@ -21,9 +21,9 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "native-addon-loader": "^2.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
+    "native-addon-loader": "^2.0.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
