--- a/package.json
+++ b/package.json
@@ -7,24 +7,40 @@
     "build": "npx webpack --node-env production",
     "dev": "npx webpack --mode=development",
     "start": "qode ./dist/index.js",
-    "debug": "qode --inspect ./dist/index.js"
+    "debug": "qode --inspect ./dist/index.js",
+    "prettier": "npx prettier --write .",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@nodegui/react-nodegui": "^0.13.0",
-    "babel-loader": "^8.2.3",
     "react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
     "native-addon-loader": "^2.0.1",
+    "prettier": "2.5.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
