--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
             "ImportDeclaration": "never",
             "ExportDeclaration": { "multiline": true, "minProperties": 3 }
           }
-        ]
+        ],
+        "comma-dangle": ["error", "only-multiline"]
     }
 }
