--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nodegui/nodegui": "^0.45.4",
     "@nodegui/react-nodegui": "^0.13.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2"
   },
   "devDependencies": {
