Build: Change commit analyzer preset

--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
   "release": {
     "branches": ["main"],
     "plugins": [
-      "@semantic-release/commit-analyzer", 
+      [ 
+        "@semantic-release/commit-analyzer", {
+          "preset": "eslint"
+        }
+      ],
       "@semantic-release/release-notes-generator",
       [
         "@semantic-release/github", {
