--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 'lts/*'
-      
+          cache: 'npm'
+
       - name: Install dependencies
         run: |
           sudo apt-get install pkg-config build-essential
