--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,8 @@ on:
 jobs:
   build:
     strategy:
-      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-18.04, macos-latest]
     
     runs-on: ${{ matrix.os }}
 
@@ -27,10 +26,12 @@ jobs:
 
       - name: Install Dependencies (Linux)
         run: |
+          sudo apt-get update
           sudo apt-get install pkg-config build-essential
           sudo apt-get install cmake make
           sudo apt-get install mesa-common-dev libglu1-mesa-dev
-        if: matrix.os == 'ubuntu-latest'
+          sudo apt-get install libxkbcommon-x11-0
+        if: matrix.os == 'ubuntu-18.04'
       
       - name: Install Dependencies (macOS)
         run: |
@@ -39,13 +40,13 @@ jobs:
         if: matrix.os == 'macos-latest'
 
       - name: Install node dependencies
-        run: npm ci
+        run: npm install
       
       - name: Init packer
         run: npx nodegui-packer --init LookingGlass
       
       - name: Build distributions
-        run: npm run build
+        run: QT_DEBUG_PLUGINS=1 npm run build
       
       - name: Release
         env:
