--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.28.0",
     "ical.js": "^1.5.0",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "tsdav": "^1.1.6"
   },
